chore: optimize code